2011-12-29  Rene Liebscher <R.Liebscher@gmx.de>

	bug #34302: Feature request : device configuration with parent classes
	* config_gram.y: Added part parent rule and allow overwriting existing
	data at several places
	* avrdude.conf.in: Added description comment and m328/m328p as example
	* avrpart.c: avr_dup_mem-functions now copy buf and tags memory block 
	only they are already allocated.
	* lexer.l: Added parent as valid token
	
	(not in original patch) 
	* avrpart.c: New function avr_dup_opcode. avr_dup_mem/avr_dup_part-
	functions now duplicate the opcodes in their op-array to avoid memory leaks.
	* doc/avrdude.texi: Added description of part parent feature

2011-12-29  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7687: Autogenerating programmers and parts lists for docs
	(generating the parts lists, programmers lists follows later)
	* doc/Makefile.am: Add rule how to create avrdude before generating parts list

2011-12-29  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7687: Autogenerating programmers and parts lists for docs
	(generating the parts lists, programmers lists follows later)
	* doc/avrdude.texi: Add include of generated table of parts
	* doc/Makefile.am: Add generating of table of parts in parts.texi
	* doc/parts_comments.txt: Adding file containing part commenz references
	* avrdude.1: Remove table of parts and mention "-p ?" option
	* avrpart.c: Use AVR_DESCLEN for strncasecmp at list sorting

2011-12-22  Rene Liebscher <R.Liebscher@gmx.de>

	* configure.ac: Add writing of definition of confsubst to config.status,
	so it can run alone, not only called by configure.

2011-12-17  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7680: Fixing timeout problem in ser_recv in ser_win32.c
	* ser_win32.c: Return -1 at timeout in ser_recv().

2011-12-17  Rene Liebscher <R.Liebscher@gmx.de>

	* config_gram.y: Fixed another memory leak, when define an operation
	more than once
	* avrdude.conf.in: Fixed double definition at ATmega6490
